--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "^9.4.2",
+    "axios": "^1.3.4",
+    "firebase": "^9.18.0",
+    "firebase-admin": "^9.12.0",
     "firebase-functions": "^3.13.1",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.3.4",
-    "firebase": "^9.18.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.3",
